fixing nav bar and bio spacing

--- a/frontend/stylesheet/styles.css
+++ b/frontend/stylesheet/styles.css
@@ -2,6 +2,7 @@
 #root{
     max-width: 800px;
     justify-content: center;
+    align-items: center;
     margin: auto;
     display: flex;
 }
@@ -9,7 +10,6 @@
 .main {
     display: flex;
     flex-direction: row;
-    gap: 20vh;
     margin-top: 10vh;
 }
 
@@ -20,8 +20,8 @@ ul {
     border-radius: 7px;
     /* box-shadow: 1px 1px 1px rgb(0, 128, 119); */
     gap: 20px;
-    align-items: center;
-    width: 25vw;
+
+    width: 10vw;
     height: 30vw;
 }
 
@@ -76,4 +76,10 @@ button {
 
 .text {
     flex-direction: column;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 3vh;
 }
